# rcas

./: .gitignore  CMakeLists.txt  README.md
apps/: app.cpp
benchmarks/: cost_model.cpp  query_runtime.cpp  scalability.cpp  scalability2.cpp  skew.cpp  space.cpp  structure.cpp
include/: compile.hpp
include/benchmark/: approach.hpp  benchmarks.hpp  cost_experiment.hpp  query_experiment.hpp  scalability_experiment.hpp  scalability_experiment2.hpp  selectivity_computer.hpp  skew_experiment.hpp  space_experiment.hpp  structure_experiment.hpp  utils.hpp
include/cas/: binary_key.hpp  bulk_load.hpp  cas.hpp  csv_importer.hpp  dimension.hpp  index.hpp  index_stats.hpp  index_type.hpp  insertion.hpp  insertion_static.hpp  interleaved_key.hpp  interleaver.hpp  key.hpp  key_decoder.hpp  key_encoder.hpp  key_encoding.hpp  locator.hpp  node.hpp  node0.hpp  node16.hpp  node256.hpp  node4.hpp  node48.hpp  partition_importer.hpp  path_matcher.hpp  prefix_matcher.hpp  query.hpp  query_stats.hpp  search_key.hpp  surrogate.hpp  surrogate_cas.hpp  types.hpp  utils.hpp
include/casxml/: allocator.hpp  casxml.hpp  entry.hpp
scripts/: bm_scalability.py  rcas_scalability_experiment.rb  run_benchmarks.sh
src/: CMakeLists.txt
src/benchmark/: cost_experiment.cpp  query_experiment.cpp  scalability_experiment.cpp  scalability_experiment2.cpp  selectivity_computer.cpp  skew_experiment.cpp  space_experiment.cpp  structure_experiment.cpp  utils.cpp
src/cas/: binary_key.cpp  bulk_load.cpp  cas.cpp  csv_importer.cpp  index.cpp  insertion.cpp  insertion_static.cpp  interleaved_key.cpp  interleaver.cpp  key.cpp  key_decoder.cpp  key_encoder.cpp  locator.cpp  node.cpp  node0.cpp  node16.cpp  node256.cpp  node4.cpp  node48.cpp  partition_importer.cpp  path_matcher.cpp  prefix_matcher.cpp  query.cpp  query_stats.cpp  search_key.cpp  surrogate.cpp  surrogate_cas.cpp  surrogate_path_matcher.cpp  types.cpp  utils.cpp
src/casxml/: casxml.cpp  entry.cpp
tests/: CMakeLists.txt  test.cpp
tests/cas/: insertion_test.cpp  interleaver_test.cpp  key_encoder_test.cpp  node0_test.cpp  path_matcher_test.cpp  prefix_matcher_test.cpp  query_test.cpp  surrogate_test.cpp
tests/include/: comparator.hpp
